--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
     <title>Document</title>
 </head>
 <body>
-<p>Hi</p>
+<h1>Answers on add. quest</h1>
+<h2>Q1</h2>
+<p>inline elements</p>
+<ul>
+    <li>a</li>
+    <li>button</li>
+    <li>b</li>
+    <li>i</li>
+    <li>s</li>
+    <li>u</li>
+    <li>span</li>
+    <li>sub</li>
+    <li>sup</li>
+    <li>img</li>
+    <li>input</li>
+    <li>br</li>
+</ul>
+<p>block elements</p>
+<ul>
+<li>address</li>
+<li>article</li>
+<li>body</li>
+<li>div</li>
+<li>footer</li>
+<li>form</li>
+<li>h1-h6</li>
+<li>head</li>
+<li>header</li>
+<li>html</li>
+<li>meta</li>
+<li>nav</li>
+<li>ol</li>
+<li>p</li>
+<li>section</li>
+<li>select</li>
+<li>ul</li>
+</ul>
+
 </body>
 </html>
