--- a/index.html
+++ b/index.html
@@ -12,38 +12,38 @@
 <h2>Q1</h2>
 <p>inline elements</p>
 <ul>
-    <li>a</li>
-    <li>button</li>
-    <li>b</li>
-    <li>i</li>
-    <li>s</li>
-    <li>u</li>
-    <li>span</li>
-    <li>sub</li>
-    <li>sup</li>
-    <li>img</li>
-    <li>input</li>
-    <li>br</li>
+    <li>&lt;a&gt;</li>
+    <li>&lt;button&gt;</li>
+    <li>&lt;b&gt;</li>
+    <li>&lt;i&gt;</li>
+    <li>&lt;s&gt;</li>
+    <li>&lt;u&gt;</li>
+    <li>&lt;span&gt;</li>
+    <li>&lt;sub&gt;</li>
+    <li>&lt;sup&gt;</li>
+    <li>&lt;img&gt;</li>
+    <li>&lt;input&gt;</li>
+    <li>&lt;br&gt;</li>
 </ul>
 <p>block elements</p>
 <ul>
-<li>address</li>
-<li>article</li>
-<li>body</li>
-<li>div</li>
-<li>footer</li>
-<li>form</li>
-<li>h1-h6</li>
-<li>head</li>
-<li>header</li>
-<li>html</li>
-<li>meta</li>
-<li>nav</li>
-<li>ol</li>
-<li>p</li>
-<li>section</li>
-<li>select</li>
-<li>ul</li>
+<li>&lt;address&gt;</li>
+<li>&lt;article&gt;</li>
+<li>&lt;body&gt;</li>
+<li>&lt;div&gt;</li>
+<li>&lt;footer&gt;</li>
+<li>&lt;form&gt;</li>
+<li>&lt;h1-h6&gt;</li>
+<li>&lt;head&gt;</li>
+<li>&lt;header&gt;</li>
+<li>&lt;html&gt;</li>
+<li>&lt;meta&gt;</li>
+<li>&lt;nav&gt;</li>
+<li>&lt;ol&gt;</li>
+<li>&lt;p&gt;</li>
+<li>&lt;section&gt;</li>
+<li>&lt;select&gt;</li>
+<li>&lt;ul&gt;</li>
 </ul>
 
 </body>
