--- a/index.html
+++ b/index.html
@@ -8,43 +8,60 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Answers on add. quest</h1>
-<h2>Q1</h2>
-<p>inline elements</p>
+<!--header>nav>a[href=#]*4>lorem1^br)+h1+(ul>li*6>img[src="img/image-$.jpg"]+p>lorem1^h2>lorem3^p>lorem30)+button{LOAD MORE}-->
+<header>
+    <nav>
+        <ul>
+            <li><a href="#">Lyfestyle</a></li>
+            <li><a href="#">Photodiary</a></li>
+            <li><a href="#">Music</a></li>
+            <li><a href="#">Travel</a></li>
+        </ul>
+    </nav>
+</header>
+<h1></h1>
 <ul>
-    <li>&lt;a&gt;</li>
-    <li>&lt;button&gt;</li>
-    <li>&lt;b&gt;</li>
-    <li>&lt;i&gt;</li>
-    <li>&lt;s&gt;</li>
-    <li>&lt;u&gt;</li>
-    <li>&lt;span&gt;</li>
-    <li>&lt;sub&gt;</li>
-    <li>&lt;sup&gt;</li>
-    <li>&lt;img&gt;</li>
-    <li>&lt;input&gt;</li>
-    <li>&lt;br&gt;</li>
+    <li><img src="img/image-1.jpg" alt="One, who above the crowd" sizes="419px, 280px">
+        <p>Lyfestyle</p>
+        <h2>More than just a music festival</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam blanditiis error magnam officia qui soluta
+            velit. Aliquam ducimus eveniet excepturi inventore iste, iusto nam, odio officia placeat reiciendis totam
+            voluptas.</p>
+    </li>
+    <li><img src="img/image-2.jpg" alt="nice, hot cup of coffee on winter" sizes="419px, 280px">
+        <p>Lyfestyle</p>
+        <h2>life tastes better with coffee</h2>
+        <p>Consequuntur dolores hic quasi quos, reprehenderit soluta vel. At eveniet iusto mollitia nemo optio quaerat.
+            Beatae cumque et facilis hic vitae. Animi eaque in nesciunt obcaecati praesentium quae, quidem
+            voluptatibus?</p>
+    </li>
+    <li><img src="img/image-3.jpg" alt="Two girls with Gold Bridge on background" sizes="419px, 280px">
+        <p>Photodiary</p>
+        <h2>American dream</h2>
+        <p>Culpa deleniti fugiat fugit maxime molestias quidem sequi. Ad architecto assumenda, corporis cumque harum
+            ipsum minima, officia provident quasi rerum, sequi sint unde. Doloremque ex minima nesciunt reprehenderit
+            sapiente sunt?</p>
+    </li>
+    <li><img src="img/image-4.jpg" alt="Someone warmly dressed" sizes="419px, 280px">
+        <p>Photodiary</p>
+        <h2>A day exploring the alps</h2>
+        <p>Aut autem distinctio eius impedit, incidunt iure magnam nam perspiciatis quo reprehenderit sapiente sint
+            veritatis vero? Aliquid consequuntur delectus, dicta et inventore, laudantium modi omnis, quos recusandae
+            sequi tenetur totam.</p>
+    </li>
+    <li><img src="img/image-5.jpg" alt="Black &amp white foto. Girl on the road" sizes="419px, 280px">
+        <p>Lyfestyle</p>
+        <h2>Top 10 song for running</h2>
+        <p>A accusamus, assumenda aut commodi consectetur corporis dicta dignissimos doloremque eius eos est et harum
+            molestiae nam nesciunt nulla odit omnis qui quibusdam quod rem repellat sed soluta veritatis voluptas.</p>
+    </li>
+    <li><img src="img/image-6.jpg" alt="Black road through the icy landscape" sizes="419px, 280px">
+        <p>Lyfestyle</p>
+        <h2>Cold winter days</h2>
+        <p>Assumenda beatae dolorem id labore modi nihil, provident reiciendis reprehenderit ut voluptas? Aperiam at,
+            culpa cum dicta dolor error eum explicabo fuga id, ipsam nemo nisi quae rerum sint vel.</p>
+    </li>
 </ul>
-<p>block elements</p>
-<ul>
-<li>&lt;address&gt;</li>
-<li>&lt;article&gt;</li>
-<li>&lt;body&gt;</li>
-<li>&lt;div&gt;</li>
-<li>&lt;footer&gt;</li>
-<li>&lt;form&gt;</li>
-<li>&lt;h1-h6&gt;</li>
-<li>&lt;head&gt;</li>
-<li>&lt;header&gt;</li>
-<li>&lt;html&gt;</li>
-<li>&lt;meta&gt;</li>
-<li>&lt;nav&gt;</li>
-<li>&lt;ol&gt;</li>
-<li>&lt;p&gt;</li>
-<li>&lt;section&gt;</li>
-<li>&lt;select&gt;</li>
-<li>&lt;ul&gt;</li>
-</ul>
-
+<button>LOAD MORE</button>
 </body>
 </html>
