--- a/index.html
+++ b/index.html
@@ -21,41 +21,47 @@
 </header>
 <h1></h1>
 <ul>
-    <li><img src="img/image-1.jpg" alt="One, who above the crowd" sizes="419px, 280px">
+    <li>
+        <img src="img/image-1.jpg" alt="One, who above the crowd" sizes="419px, 280px">
         <p>Lyfestyle</p>
         <h2>More than just a music festival</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam blanditiis error magnam officia qui soluta
             velit. Aliquam ducimus eveniet excepturi inventore iste, iusto nam, odio officia placeat reiciendis totam
             voluptas.</p>
     </li>
-    <li><img src="img/image-2.jpg" alt="nice, hot cup of coffee on winter" sizes="419px, 280px">
+    <li>
+        <img src="img/image-2.jpg" alt="nice, hot cup of coffee on winter" sizes="419px, 280px">
         <p>Lyfestyle</p>
         <h2>life tastes better with coffee</h2>
         <p>Consequuntur dolores hic quasi quos, reprehenderit soluta vel. At eveniet iusto mollitia nemo optio quaerat.
             Beatae cumque et facilis hic vitae. Animi eaque in nesciunt obcaecati praesentium quae, quidem
             voluptatibus?</p>
     </li>
-    <li><img src="img/image-3.jpg" alt="Two girls with Gold Bridge on background" sizes="419px, 280px">
+    <li>
+        <img src="img/image-3.jpg" alt="Two girls with Gold Bridge on background" sizes="419px, 280px">
         <p>Photodiary</p>
         <h2>American dream</h2>
         <p>Culpa deleniti fugiat fugit maxime molestias quidem sequi. Ad architecto assumenda, corporis cumque harum
             ipsum minima, officia provident quasi rerum, sequi sint unde. Doloremque ex minima nesciunt reprehenderit
             sapiente sunt?</p>
     </li>
-    <li><img src="img/image-4.jpg" alt="Someone warmly dressed" sizes="419px, 280px">
+    <li>
+        <img src="img/image-4.jpg" alt="Someone warmly dressed" sizes="419px, 280px">
         <p>Photodiary</p>
         <h2>A day exploring the alps</h2>
         <p>Aut autem distinctio eius impedit, incidunt iure magnam nam perspiciatis quo reprehenderit sapiente sint
             veritatis vero? Aliquid consequuntur delectus, dicta et inventore, laudantium modi omnis, quos recusandae
             sequi tenetur totam.</p>
     </li>
-    <li><img src="img/image-5.jpg" alt="Black &amp white foto. Girl on the road" sizes="419px, 280px">
+    <li>
+        <img src="img/image-5.jpg" alt="Black &amp white foto. Girl on the road" sizes="419px, 280px">
         <p>Lyfestyle</p>
         <h2>Top 10 song for running</h2>
         <p>A accusamus, assumenda aut commodi consectetur corporis dicta dignissimos doloremque eius eos est et harum
             molestiae nam nesciunt nulla odit omnis qui quibusdam quod rem repellat sed soluta veritatis voluptas.</p>
     </li>
-    <li><img src="img/image-6.jpg" alt="Black road through the icy landscape" sizes="419px, 280px">
+    <li>
+        <img src="img/image-6.jpg" alt="Black road through the icy landscape" sizes="419px, 280px">
         <p>Lyfestyle</p>
         <h2>Cold winter days</h2>
         <p>Assumenda beatae dolorem id labore modi nihil, provident reiciendis reprehenderit ut voluptas? Aperiam at,
