--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <!--<meta name="viewport"-->
+          <!--content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
+    <!--Валидатор советует не использовать эти МЕТА, что бы не ограничивать юзверя. Метки выставленны эмметом по сниппету html:5-->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
@@ -19,10 +20,11 @@
         </ul>
     </nav>
 </header>
-<h1></h1>
+<!--<h1></h1>-->
+<!--Заголовок закомментирован в угоду валлидатору. Не может быть h2 без h1 на странице, в задании сказано - выполнить без цсс, так что скрыть не могу.-->
 <ul>
     <li>
-        <img src="img/image-1.jpg" alt="One, who above the crowd" sizes="419px, 280px">
+        <img src="img/image-1.jpg" alt="One, who above the crowd" width="419" height="280">
         <p>Lyfestyle</p>
         <h2>More than just a music festival</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam blanditiis error magnam officia qui soluta
@@ -30,7 +32,7 @@
             voluptas.</p>
     </li>
     <li>
-        <img src="img/image-2.jpg" alt="nice, hot cup of coffee on winter" sizes="419px, 280px">
+        <img src="img/image-2.jpg" alt="nice, hot cup of coffee on winter" width="419" height="280">
         <p>Lyfestyle</p>
         <h2>life tastes better with coffee</h2>
         <p>Consequuntur dolores hic quasi quos, reprehenderit soluta vel. At eveniet iusto mollitia nemo optio quaerat.
@@ -38,7 +40,7 @@
             voluptatibus?</p>
     </li>
     <li>
-        <img src="img/image-3.jpg" alt="Two girls with Gold Bridge on background" sizes="419px, 280px">
+        <img src="img/image-3.jpg" alt="Two girls with Gold Bridge on background" width="419" height="280">
         <p>Photodiary</p>
         <h2>American dream</h2>
         <p>Culpa deleniti fugiat fugit maxime molestias quidem sequi. Ad architecto assumenda, corporis cumque harum
@@ -46,7 +48,7 @@
             sapiente sunt?</p>
     </li>
     <li>
-        <img src="img/image-4.jpg" alt="Someone warmly dressed" sizes="419px, 280px">
+        <img src="img/image-4.jpg" alt="Someone warmly dressed" width="419" height="280">
         <p>Photodiary</p>
         <h2>A day exploring the alps</h2>
         <p>Aut autem distinctio eius impedit, incidunt iure magnam nam perspiciatis quo reprehenderit sapiente sint
@@ -54,14 +56,14 @@
             sequi tenetur totam.</p>
     </li>
     <li>
-        <img src="img/image-5.jpg" alt="Black &amp white foto. Girl on the road" sizes="419px, 280px">
+        <img src="img/image-5.jpg" alt="Black'n'white foto. Girl on the road" width="419" height="280"> <!--&amp; заменен на 'n' из за ругани валидатора. Можно в данном случае ставить &amp;? в тексте, под кавычками. Хром воспринимает нормально...-->
         <p>Lyfestyle</p>
         <h2>Top 10 song for running</h2>
         <p>A accusamus, assumenda aut commodi consectetur corporis dicta dignissimos doloremque eius eos est et harum
             molestiae nam nesciunt nulla odit omnis qui quibusdam quod rem repellat sed soluta veritatis voluptas.</p>
     </li>
     <li>
-        <img src="img/image-6.jpg" alt="Black road through the icy landscape" sizes="419px, 280px">
+        <img src="img/image-6.jpg" alt="Black road through the icy landscape" width="419" height="280">
         <p>Lyfestyle</p>
         <h2>Cold winter days</h2>
         <p>Assumenda beatae dolorem id labore modi nihil, provident reiciendis reprehenderit ut voluptas? Aperiam at,
