--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-<!--header>nav>a[href=#]*4>lorem1^br)+h1+(ul>li*6>img[src="img/image-$.jpg"]+p>lorem1^h2>lorem3^p>lorem30)+button{LOAD MORE}-->
+<!--(header>nav>ul>li*4>a[href=#])+h1+(ul>li*6>img[src="img/image-$.jpg" width="419" heigth="280"]+p+h2+p>lorem30)+button{LOAD MORE} -->
 <header>
     <nav>
         <ul>
