--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!--<meta name="viewport"-->
-          <!--content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
-    <!--Валидатор советует не использовать эти МЕТА, что бы не ограничивать юзверя. Метки выставленны эмметом по сниппету html:5-->
+    <meta name="viewport"
+           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
@@ -20,8 +19,7 @@
         </ul>
     </nav>
 </header>
-<!--<h1></h1>-->
-<!--Заголовок закомментирован в угоду валлидатору. Не может быть h2 без h1 на странице, в задании сказано - выполнить без цсс, так что скрыть не могу.-->
+<h1>Мое ДЗ</h1>
 <ul>
     <li>
         <img src="img/image-1.jpg" alt="One, who above the crowd" width="419" height="280">
