--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -15,10 +15,10 @@
     <nav>
         <ul class="menu-nav">
             <li>
-                <a href="html-css/module1-2/index.html">Module 1-2</a>
+                <a href="/html-css/module1-2/index.html">Module 1-2</a>
             </li>
             <li>
-                <a href="html-css/module-3/index.html">Module 3</a>
+                <a href="/html-css/module-3/index.html">Module 3</a>
             </li>
             <li>
                 <a href="#">Module 4</a>
