--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -8,17 +8,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700i">
 </head>
 <body>
+<!--Шапка "сайта" проекта-->
 <header>
     <nav>
         <ul class="menu-nav">
             <li>
-                <a href="html-css/module1-2/index.html">Module 1-2</a>
+                <a href="/goit-fe-course/html-css/module1-2/index.html">Module 1-2</a>
             </li>
             <li>
-                <a href="html-css/module-3/index.html">Module 3</a>
+                <a href="/goit-fe-course/html-css/module-3/index.html">Module 3</a>
             </li>
             <li>
                 <a href="#">Module 4</a>
@@ -36,64 +38,71 @@
     </nav>
 </header>
 <h1 class="visually-hidden">add tasks module 3</h1>
-<main>
-    <h2>Task 1</h2>
-    <div class="wrapper-task1">
-        <header>
-            <nav>
-                <ul class="menu-nav">
-                    <li>
-                        <a href="#">Blank</a>
-                    </li>
-                    <li>
-                        <a href="#">Blank</a>
-                    </li>
-                    <li>
-                        <a href="http://fecore.net.ua/tasks/module-3.html" target="_blank" rel="noreferrer">Tasks</a>
-                    </li>
-                    <li>
-                        <a href="https://codepen.io/LTars/pen/RQzwep" target="_blank" rel="noreferrer">Codepen</a>
-                    </li>
-                    <li>
-                        <a href="#">Blank</a>
-                    </li>
-                    <li>
-                        <a href="#">Blank</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-    </div>
-    <h2>Task 2</h2>
-    <div class="wrapper-task2">
-        <img src="img/image-1.jpg" alt="One, who above the crowd" width="419" height="280">
-        <p class="article__theme">Lyfestyle</p>
-        <p class="article__title">More than just a music festival</p>
-        <p class="article__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, earum eligendi nisi omnis praesentium quidem quo reprehenderit. At culpa dignissimos ex magnam natus quibusdam. Commodi dolores ducimus ipsa iste voluptatem.</p>
-    </div>
-    <h2>Task 3</h2>
-    <div class="wrapper-task3">
-        <ul>
-            <li>
-                <img src="img/image-1.jpg" alt="One, who above the crowd" width="419" height="280">
-                <p class="article__theme">Lyfestyle</p>
-                <p class="article__title">More than just a music festival</p>
-                <p class="article__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, earum eligendi nisi omnis praesentium quidem quo reprehenderit. At culpa dignissimos ex magnam natus quibusdam. Commodi dolores ducimus ipsa iste voluptatem.</p>
-            </li>
-            <li>
-                <img src="img/image-2.jpg" alt="One, who above the crowd" width="419" height="280">
-                <p class="article__theme">Lyfestyle</p>
-                <p class="article__title">life tastes better with coffee</p>
-                <p class="article__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, earum eligendi nisi omnis praesentium quidem quo reprehenderit. At culpa dignissimos ex magnam natus quibusdam. Commodi dolores ducimus ipsa iste voluptatem.</p>
-            </li>
+<!--Страница ДЗ-->
+<section>
+<header>
+    <nav>
+        <ul class="menu-list">
+            <li><a href="#">Lyfestyle</a></li>
+            <li><a href="#">Photodiary</a></li>
+            <li><a href="#">Music</a></li>
+            <li><a href="#">Travel</a></li>
         </ul>
-    </div>
-    <h2>Task 4</h2>
-    <div class="wrapper-task4">
-        <p>#myid:focus = 110<br>
-            .menu > li > a:hover = 22<br>
-            #myid > ul > li a:hover = 113</p>
-    </div>
+    </nav>
+</header>
+<h1 class="visually-hidden">Homework module 3</h1>
+<main>
+    <ul class="item-list">
+        <li>
+            <img src="img/image-1.jpg" alt="One, who above the crowd" width="421" height="280">
+            <p class="item-list__theme">Lyfestyle</p>
+            <h2 class="item-list__title">More than just a music festival</h2>
+            <p class="item-list__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam blanditiis error magnam officia qui soluta
+                velit. Aliquam ducimus eveniet excepturi inventore iste, iusto nam, odio officia placeat reiciendis totam
+                voluptas.</p>
+        </li>
+        <li>
+            <img src="img/image-2.jpg" alt="nice, hot cup of coffee on winter" width="421" height="280">
+            <p class="item-list__theme">Lyfestyle</p>
+            <h2 class="item-list__title">life tastes better with coffee</h2>
+            <p class="item-list__text">Consequuntur dolores hic quasi quos, reprehenderit soluta vel. At eveniet iusto mollitia nemo optio quaerat.
+                Beatae cumque et facilis hic vitae. Animi eaque in nesciunt obcaecati praesentium quae, quidem
+                voluptatibus?</p>
+        </li>
+        <li>
+            <img src="img/image-3.jpg" alt="Two girls with Gold Bridge on background" width="421" height="280">
+            <p class="item-list__theme">Photodiary</p>
+            <h2 class="item-list__title">American dream</h2>
+            <p class="item-list__text">Culpa deleniti fugiat fugit maxime molestias quidem sequi. Ad architecto assumenda, corporis cumque harum
+                ipsum minima, officia provident quasi rerum, sequi sint unde. Doloremque ex minima nesciunt reprehenderit
+                sapiente sunt?</p>
+        </li>
+        <li>
+            <img src="img/image-4.jpg" alt="Someone warmly dressed" width="421" height="280">
+            <p class="item-list__theme">Photodiary</p>
+            <h2 class="item-list__title">A day exploring the alps</h2>
+            <p class="item-list__text">Aut autem distinctio eius impedit, incidunt iure magnam nam perspiciatis quo reprehenderit sapiente sint
+                veritatis vero? Aliquid consequuntur delectus, dicta et inventore, laudantium modi omnis, quos recusandae
+                sequi tenetur totam.</p>
+        </li>
+        <li>
+            <img src="img/image-5.jpg" alt="Black'n'white foto. Girl on the road" width="421" height="280"> <!--&amp; заменен на 'n' из за ругани валидатора. Можно в данном случае ставить &amp;? в тексте, под кавычками. Хром воспринимает нормально...-->
+            <p class="item-list__theme">Lyfestyle</p>
+            <h2 class="item-list__title">Top 10 song for running</h2>
+            <p class="item-list__text">A accusamus, assumenda aut commodi consectetur corporis dicta dignissimos doloremque eius eos est et harum
+                molestiae nam nesciunt nulla odit omnis qui quibusdam quod rem repellat sed soluta veritatis voluptas.</p>
+        </li>
+        <li>
+            <img src="img/image-6.jpg" alt="Black road through the icy landscape" width="421" height="280">
+            <p class="item-list__theme">Lyfestyle</p>
+            <h2 class="item-list__title">Cold winter days</h2>
+            <p class="item-list__text">Assumenda beatae dolorem id labore modi nihil, provident reiciendis reprehenderit ut voluptas? Aperiam at,
+                culpa cum dicta dolor error eum explicabo fuga id, ipsam nemo nisi quae rerum sint vel.</p>
+        </li>
+    </ul>
 </main>
+<div class="load-button"><button>LOAD MORE</button>
+</div>
+</section>
 </body>
 </html>
