Another structure change

--- a/html-css/module-3/add-tasks/index.html
+++ b/html-css/module-3/add-tasks/index.html
@@ -15,22 +15,22 @@
     <nav>
         <ul class="menu-nav">
             <li>
-                <a href="html-css/module1-2/index.html">Module 1-2</a>
+                <a href="../../module1-2/index.html">Module 1-2</a>
             </li>
             <li>
-                <a href="html-css/module-3/index.html">Module 3</a>
+                <a href="../../module-3/index.html">Module 3</a>
             </li>
             <li>
-                <a href="#">Module 4</a>
+                <a href="./index.html">Module 3 add</a>
             </li>
             <li>
-                <a href="#">Module 5</a>
+                <a href="#">Blank</a>
             </li>
             <li>
-                <a href="#">Module 6</a>
+                <a href="#">Blank</a>
             </li>
             <li>
-                <a href="#">Module 7</a>
+                <a href="#">Blank</a>
             </li>
         </ul>
     </nav>
@@ -97,3 +97,4 @@
 </main>
 </body>
 </html>
+
