--- a/html-css/module-3/index.html
+++ b/html-css/module-3/index.html
@@ -6,8 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700i">
 </head>
@@ -17,27 +17,27 @@
     <nav>
         <ul class="menu-nav">
             <li>
-                <a href="/goit-fe-course/html-css/module1-2/index.html">Module 1-2</a>
+                <a href="../module1-2/index.html">Module 1-2</a>
             </li>
             <li>
-                <a href="/goit-fe-course/html-css/module-3/index.html">Module 3</a>
+                <a href="./index.html">Module 3</a>
             </li>
             <li>
-                <a href="#">Module 4</a>
+                <a href="./add-tasks/index.html">Module 3 add</a>
             </li>
             <li>
-                <a href="#">Module 5</a>
+                <a href="#">Blank</a>
             </li>
             <li>
-                <a href="#">Module 6</a>
+                <a href="#">Blank</a>
             </li>
             <li>
-                <a href="#">Module 7</a>
+                <a href="#">Blank</a>
             </li>
         </ul>
     </nav>
 </header>
-<h1 class="visually-hidden">add tasks module 3</h1>
+<h1 class="visually-hidden">Homework module 1-2</h1>
 <!--Страница ДЗ-->
 <section>
 <header>
