Home page linked

--- a/index.html
+++ b/index.html
@@ -8,17 +8,31 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700i">
 </head>
 <body>
+<!--Шапка "сайта" проекта-->
 <header>
     <nav>
-        <ul class="menu">
-            <li class="menu__item"><a href="html-css/module1-2/index.html">Module 1-2</a></li>
-            <li class="menu__item"><a href="html-css/module-3/index.html">Module 3</a></li>
-            <li class="menu__item"><a href="#">Module 4</a></li>
-            <li class="menu__item"><a href="#">Module 5</a></li>
-            <li class="menu__item"><a href="#">Module 6</a></li>
-            <li class="menu__item"><a href="#">Module 7</a></li>
+        <ul class="menu-nav">
+            <li>
+                <a href="./html-css/module1-2/index.html">Module 1-2</a>
+            </li>
+            <li>
+                <a href="./html-css/module-3/index.html">Module 3</a>
+            </li>
+            <li>
+                <a href="./html-css/module-3/add-tasks/index.html">Module 3 add</a>
+            </li>
+            <li>
+                <a href="#">Blank</a>
+            </li>
+            <li>
+                <a href="#">Blank</a>
+            </li>
+            <li>
+                <a href="#">Blank</a>
+            </li>
         </ul>
     </nav>
 </header>
