Add tasks for module 4 complite

--- a/html-css/module-3/add-tasks/index.html
+++ b/html-css/module-3/add-tasks/index.html
@@ -24,10 +24,10 @@
                 <a href="./index.html">Module 3 add</a>
             </li>
             <li>
-                <a href="#">Blank</a>
+                <a href="../../module-4/index.html">Module 4</a>
             </li>
             <li>
-                <a href="#">Blank</a>
+                <a href="../../module-3/add-tasks/index.html">Module 4 add</a>
             </li>
             <li>
                 <a href="#">Blank</a>
