last changes add Tasks module 4

--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -12,42 +12,68 @@
 </head>
 <body>
 <header>
-    <nav>
-        <ul class="menu-nav">
-            <li>
-                <a href="../../module1-2/index.html">Module 1-2</a>
-            </li>
-            <li>
-                <a href="../../module-3/index.html">Module 3</a>
-            </li>
-            <li>
-                <a href="./index.html">Module 3 add</a>
-            </li>
-            <li>
-                <a href="#">Blank</a>
-            </li>
-            <li>
-                <a href="#">Blank</a>
-            </li>
-            <li>
-                <a href="#">Blank</a>
-            </li>
+    <nav class="menu-nav clearfix">
+        <a href="#" class="site-logo">Mart</a>
+        <ul class="menu-nav__list clearfix">
+            <li>Contact us</li>
+            <li>Blog</li>
+            <li>Shop</li>
+            <li>Page</li>
+            <li>About Us</li>
+            <li>Home</li>
         </ul>
     </nav>
 </header>
-<h1 class="visually-hidden">add tasks module 3</h1>
+<h1 class="visually-hidden">main page</h1>
 <main>
-    <h2>Task 1</h2>
-    <div class="wrapper-task1">
-    </div>
-    <h2>Task 2</h2>
-    <div class="wrapper-task2">
-    </div>
-    <h2>Task 3</h2>
-    <div class="wrapper-task3">
-    </div>
-    <h2>Task 4</h2>
-    <div class="wrapper-task4">
+    <h2>FEATURED PRODUCTS</h2>
+<div class="wrapper-products">
+    <ul class="item-list clearfix">
+        <li><img src="./img/product1.png" alt="" height="322" width="255">
+            <p>Blue Tshirt<span>$26</span></p>
+        </li>
+        <li><img src="./img/product2.png" alt="" height="322" width="255">
+            <p>WOMAN shirt<span>$31</span></p>
+        </li>
+        <li><img src="./img/product3.png" alt="" height="322" width="255">
+            <p>YELLOW Tshirt<span>$21</span></p>
+        </li>
+        <li><img src="./img/product4.png" alt="" height="322" width="255">
+            <p>Cool lingerie<span>$56</span></p>
+        </li>
+        <li><img src="./img/product5.png" alt="" height="322" width="255">
+            <p>Blue Tshirt<span>$26</span></p>
+        </li>
+        <li><img src="./img/product6.png" alt="" height="322" width="255">
+            <p>WOMAN shirt<span>$31</span></p>
+        </li>
+        <li><img src="./img/product7.png" alt="" height="322" width="255">
+            <p>YELLOW Tshirt<span>$21</span></p>
+        </li>
+        <li><img src="./img/product8.png" alt="" height="322" width="255">
+            <p>Cool lingerie<span>$56</span></p>
+        </li>
+    </ul>
+</div>
+    <h2>Latest news</h2>
+    <div class="wrapper-news">
+        <ul class="news-list clearfix">
+            <li><img src="./img/slide0.jpg" alt="iPad" width="347" height="262">
+                <h3></h3>
+                <p></p>
+                <button>Read more</button>
+            </li>
+            <li><img src="./img/slide1.jpg" alt="girls in library" width="347" height="262">
+                <h3></h3>
+                <p></p>
+                <button>Read more</button>
+            </li>
+            <li><img src="./img/slide2.jpg" alt="the bus" width="347" height="262">
+                <h3></h3>
+                <p></p>
+                <button>Read more</button>
+            </li>
+        </ul>
     </div>
 </main>
 </body>
