--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700i">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -29,29 +30,29 @@
     <h2>FEATURED PRODUCTS</h2>
 <div class="wrapper-products">
     <ul class="item-list clearfix">
-        <li><img src="./img/product1.png" alt="" height="322" width="255">
-            <p>Blue Tshirt<span>$26</span></p>
+        <li><a href="#"><img src="./img/product1.png" alt="" height="322" width="255">
+            <p>Blue Tshirt<span>$26</span></p></a>
         </li>
-        <li><img src="./img/product2.png" alt="" height="322" width="255">
-            <p>WOMAN shirt<span>$31</span></p>
+        <li><a href="#"><img src="./img/product2.png" alt="" height="322" width="255">
+            <p>WOMAN shirt<span>$31</span></p></a>
         </li>
-        <li><img src="./img/product3.png" alt="" height="322" width="255">
-            <p>YELLOW Tshirt<span>$21</span></p>
+        <li><a href="#"><img src="./img/product3.png" alt="" height="322" width="255">
+            <p>YELLOW Tshirt<span>$21</span></p></a>
         </li>
-        <li><img src="./img/product4.png" alt="" height="322" width="255">
-            <p>Cool lingerie<span>$56</span></p>
+        <li><a href="#"><img src="./img/product4.png" alt="" height="322" width="255">
+            <p>Cool lingerie<span>$56</span></p></a>
         </li>
-        <li><img src="./img/product5.png" alt="" height="322" width="255">
-            <p>Blue Tshirt<span>$26</span></p>
+        <li><a href="#"><img src="./img/product5.png" alt="" height="322" width="255">
+            <p>Blue Tshirt<span>$26</span></p></a>
         </li>
-        <li><img src="./img/product6.png" alt="" height="322" width="255">
-            <p>WOMAN shirt<span>$31</span></p>
+        <li><a href="#"><img src="./img/product6.png" alt="" height="322" width="255">
+            <p>WOMAN shirt<span>$31</span></p></a>
         </li>
-        <li><img src="./img/product7.png" alt="" height="322" width="255">
-            <p>YELLOW Tshirt<span>$21</span></p>
+        <li><a href="#"><img src="./img/product7.png" alt="" height="322" width="255">
+            <p>YELLOW Tshirt<span>$21</span></p></a>
         </li>
-        <li><img src="./img/product8.png" alt="" height="322" width="255">
-            <p>Cool lingerie<span>$56</span></p>
+        <li><a href="#"><img src="./img/product8.png" alt="" height="322" width="255">
+            <p>Cool lingerie<span>$56</span></p></a>
         </li>
     </ul>
 </div>
@@ -59,18 +60,18 @@
     <div class="wrapper-news">
         <ul class="news-list clearfix">
             <li><img src="./img/slide0.jpg" alt="iPad" width="347" height="262">
-                <h3></h3>
-                <p></p>
+                <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
                 <button>Read more</button>
             </li>
             <li><img src="./img/slide1.jpg" alt="girls in library" width="347" height="262">
-                <h3></h3>
-                <p></p>
+                <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
                 <button>Read more</button>
             </li>
             <li><img src="./img/slide2.jpg" alt="the bus" width="347" height="262">
-                <h3></h3>
-                <p></p>
+                <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
                 <button>Read more</button>
             </li>
         </ul>
