home-button + some fixes

--- a/html-css/module-3/add-tasks/index.html
+++ b/html-css/module-3/add-tasks/index.html
@@ -95,6 +95,7 @@
             #myid > ul > li a:hover = 113</p>
     </div>
 </main>
+<a href="../../../index.html" class="back-button">LT</a>
 </body>
 </html>
 
