--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -27,8 +27,8 @@
 </header>
 <h1 class="visually-hidden">main page</h1>
 <main>
+<section class="wrapper-products">
     <h2>FEATURED PRODUCTS</h2>
-<div class="wrapper-products">
     <ul class="item-list clearfix">
         <li><a href="#"><img src="./img/product1.png" alt="" height="322" width="255">
             <p>Blue Tshirt<span>$26</span></p></a>
@@ -55,28 +55,29 @@
             <p>Cool lingerie<span>$56</span></p></a>
         </li>
     </ul>
-</div>
+</section>
+<section class="wrapper-news">
     <h2>Latest news</h2>
-    <div class="wrapper-news">
-        <ul class="news-list clearfix">
-            <li><img src="./img/slide0.jpg" alt="iPad" width="347" height="262">
-                <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
-                <button>Read more</button>
-            </li>
-            <li><img src="./img/slide1.jpg" alt="girls in library" width="347" height="262">
-                <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
-                <button>Read more</button>
-            </li>
-            <li><img src="./img/slide2.jpg" alt="the bus" width="347" height="262">
-                <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
-                <button>Read more</button>
-            </li>
-        </ul>
-    </div>
+    <ul class="news-list clearfix">
+        <li><img src="./img/slide0.jpg" alt="iPad" width="347" height="262">
+            <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+            <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
+            <button>Read more</button>
+        </li>
+        <li><img src="./img/slide1.jpg" alt="girls in library" width="347" height="262">
+            <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+            <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
+            <button>Read more</button>
+        </li>
+        <li><img src="./img/slide2.jpg" alt="the bus" width="347" height="262">
+            <h3>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+            <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
+            <button>Read more</button>
+        </li>
+    </ul>
+</section>
 </main>
+<a href="../../index.html" class="back-button">LT</a>
 </body>
 </html>
 
