--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <a href="./html-css/module-3/add-tasks/index.html">Module 3 add</a>
             </li>
             <li>
-                <a href="#">Blank</a>
+                <a href="./html-css/module-4/index.html">Module 4</a>
             </li>
             <li>
-                <a href="#">Blank</a>
+                <a href="./html-css/module-4/add-tasks/index.html">Module 4 add</a>
             </li>
             <li>
                 <a href="#">Blank</a>
