--- a/html-css/module-5/index.html
+++ b/html-css/module-5/index.html
@@ -1,10 +1,121 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/normalize.css">
 </head>
 <body>
-
+<header>
+    <nav class="menu-nav clearfix">
+        <a href="#" class="site-logo">Mart</a>
+        <ul class="menu-nav__list clearfix">
+            <li>Contact us</li>
+            <li>Blog</li>
+            <li>Shop</li>
+            <li>Page</li>
+            <li>About Us</li>
+            <li>Home</li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <h1 class="visually-hidden">Home Page</h1>
+    <div class="slider">
+        <button class="slider-ctrl slider-ctrl-prev"></button>
+        <button class="slider-ctrl slider-ctrl-next"></button>
+        <p class="slider-descr">AFFORDABLE PARIS TOURS
+        <p>CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+        </p>
+        <ul class="slides">
+            <li><img src="#" alt="some-girls"></li>
+        </ul>
+    </div>
+    <section class="wrapper-items">
+        <h2>New collection</h2>
+        <ul class="item-list clearfix">
+            <li class="item-list_elem">
+                <div class="item-interact">
+                    <ul>
+                        <li>
+                            <button>heart</button>
+                        </li>
+                        <li>
+                            <button>arrows</button>
+                        </li>
+                        <li>
+                            <button>clock</button>
+                        </li>
+                    </ul>
+                    <button class="cart">add to cart</button>
+                </div>
+                <a href="#"><img src="./img/category-2.jpg" alt="" height="322" width="255">
+                    <p>Blue Tshirt<span>$26</span></p></a>
+            </li>
+            <li class="item-list_elem">
+                <div class="item-interact">
+                    <ul>
+                        <li>
+                            <button>heart</button>
+                        </li>
+                        <li>
+                            <button>arrows</button>
+                        </li>
+                        <li>
+                            <button>clock</button>
+                        </li>
+                    </ul>
+                    <button class="cart">add to cart</button>
+                </div>
+                <a href="#"><img src="./img/category-1.jpg" alt="" height="322" width="255">
+                    <p>WOMAN shirt<span>$31</span></p></a>
+            </li>
+            <li class="item-list_elem">
+                <div class="item-interact">
+                    <ul>
+                        <li>
+                            <button>heart</button>
+                        </li>
+                        <li>
+                            <button>arrows</button>
+                        </li>
+                        <li>
+                            <button>clock</button>
+                        </li>
+                    </ul>
+                    <button class="cart">add to cart</button>
+                </div>
+                <a href="#"><img src="./img/category-4.jpg" alt="" height="322" width="255">
+                    <p>YELLOW Tshirt<span>$21</span></p></a>
+            </li>
+            <li class="item-list_elem">
+                <div class="item-interact">
+                    <ul>
+                        <li>
+                            <button>heart</button>
+                        </li>
+                        <li>
+                            <button>arrows</button>
+                        </li>
+                        <li>
+                            <button>clock</button>
+                        </li>
+                    </ul>
+                    <button class="cart">add to cart</button>
+                </div>
+                <a href="#"><img src="./img/category-3.jpg" alt="" height="322" width="255">
+                    <p>Cool lingerie<span>$56</span></p></a>
+            </li>
+        </ul>
+    </section>
+</main>
+<footer>
+    <p>All Rights Reserved © Dokan | Designed <a href="#" target="_blank" rel="noreferrer">ThemenGraph</a></p>
+</footer>
+<a href="../../index.html" class="back-button">LT</a>
 </body>
 </html>
