--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -16,12 +16,12 @@
     <nav class="menu-nav clearfix">
         <a href="#" class="site-logo">Mart</a>
         <ul class="menu-nav__list clearfix">
-            <li>Contact us</li>
-            <li>Blog</li>
-            <li>Shop</li>
-            <li>Page</li>
-            <li>About Us</li>
-            <li>Home</li>
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Page</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Home</a></li>
         </ul>
     </nav>
 </header>
