7 add task done

--- a/html-css/module-7/add-tasks/index.html
+++ b/html-css/module-7/add-tasks/index.html
@@ -39,53 +39,51 @@
 <main>
     <h2>Task 1</h2>
     <div class="wrapper-task1">
-        <ul>
-            <li><img src="#" alt="some pict1" width="255" height="325"></li>
-            <li><img src="#" alt="some pict2" width="255" height="325"></li>
-            <li><img src="#" alt="some pict3" width="255" height="325"></li>
-            <li><img src="#" alt="some pict4" width="255" height="325"></li>
-            <li><img src="#" alt="some pict5" width="255" height="325"></li>
-            <li><img src="#" alt="some pict6" width="255" height="325"></li>
-            <li><img src="#" alt="some pict7" width="255" height="325"></li>
-            <li><img src="#" alt="some pict8" width="255" height="325"></li>
-            <li><img src="#" alt="some pict9" width="255" height="325"></li>
-        </ul>
-    </div>
-    <h2>Task 1.1</h2>
-    <div class="wrapper-task1-1">
-        <ul class="outer">
-            <li>
-                <ul class="inner">
-                    <li><img src="#" alt="some pict1" width="255" height="325"></li>
-                    <li><img src="#" alt="some pict2" width="255" height="325"></li>
-                    <li><img src="#" alt="some pict3" width="255" height="325"></li>
-                </ul>
-            </li>
-            <li>
-                <ul class="inner">
-                    <li><img src="#" alt="some pict4" width="255" height="325"></li>
-                    <li><img src="#" alt="some pict5" width="255" height="325"></li>
-                    <li><img src="#" alt="some pict6" width="255" height="325"></li>
-                </ul>
-            </li>
-            <li>
-                <ul class="inner">
-                    <li><img src="#" alt="some pict7" width="255" height="325"></li>
-                    <li><img src="#" alt="some pict8" width="255" height="325"></li>
-                    <li><img src="#" alt="some pict9" width="255" height="325"></li>
-                </ul>
-            </li>
-        </ul>
+        <table class="price-list">
+            <tbody>
+            <caption>Услуги барбершопа "Branch"</caption>
+            <tr>
+                <th>Услуга</th>
+                <th>Стоимость</th>
+                <th>Сроки</th>
+            </tr>
+            <tr>
+                <td>Мужская стрижка</td>
+                <td>230 грн</td>
+                <td>1 час</td>
+            </tr>
+            <tr>
+                <td>Женская стрижка</td>
+                <td>350 грн</td>
+                <td>2 часа</td>
+            </tr>
+            <tr>
+                <td>Стрижка + борода</td>
+                <td>350 грн</td>
+                <td>1.5 часа</td>
+            </tr>
+            <tr>
+                <td>Коррекция стрижки</td>
+                <td>170 грн</td>
+                <td>1 час</td>
+            </tr>
+            <tr>
+                <td>Стрижка бороды</td>
+                <td>150 грн</td>
+                <td>1 час</td>
+            </tr>
+            <tr>
+                <td>Черная маска</td>
+                <td>150 грн</td>
+                <td>0.5 часа</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
     <h2>Task 2</h2>
     <div class="wrapper-task2">
-        <div class="social-card">
-            <a href="#"><img src="#" alt="Avatar" width="280" height="360"></a>
-            <p class="card-title">Tars Wrm</p>
-            <p class="card-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A asperiores dignissimos
-                dolores eligendi laboriosam quisquam sapiente similique totam vel voluptatem.</p>
-            <button>Like</button>
-        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5323.319364786142!2d35.013226!3d32.8060177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sil!4v1523877693635"
+                width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 </main>
 <a href="../../../index.html" class="back-button">LT</a>
