7 add task done

--- a/html-css/module-7/add-tasks/index.html
+++ b/html-css/module-7/add-tasks/index.html
@@ -87,7 +87,7 @@
     </div>
 </main>
 <a href="../../../index.html" class="back-button">LT</a>
-<a href="https://codepen.io/LTars/pen/EEwdbR" class="cpen-button">Pen</a>
+<a href="https://codepen.io/LTars/pen/NYQjJX?editors=1010" class="cpen-button">Pen</a>
 </body>
 </html>
 
